--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     font-family: 'Bree Serif', serif;
 }
 .logo-img{
@@ -141,4 +141,4 @@ h1, h2, h3, h4{
 }
 
 
-/*#79278A !important;*/
+#79278A !important; */
